<resources>
    <string name="app_name">Gardroid</string>
    <string name="category_phrases">Phrases</string>
    <string name="category_colors">Colors</string>
    <string name="category_numbers">Daftar Penyakit Padi</string>
    <string name="category_family">Family Members</string>
    <string name="category_bnaga">Buah Naga</string>
    <string name="category_bnaga1">Buah Naga</string>
    <string name="category_ctanam">Serba-Serbi Buah Naga</string>
    <string name="category_helpbantu">Bantuan</string>
    <string name="category_tkami">Tentang</string>
    <string name="dragon">Tentang Buah Naga</string>
    <string name="description_naga">Pertama, kenalilah dulu apa buah naga itu. Ibarat merawat persahabatan, jika tidak mengenali maka merawatnya pun susah. Buah Naga telah lama dikenal oleh rakyat Tionghoa kuno sebagai buah yang membawa berkah. karena biasanya buah naga diletakkan diantara patung naga di altar. Oleh karena itu orang Vietnam menyebut buah naga atau dalam bahasa Vietnam disebut dengan nama Thang Loy di Thailand diberi nama Keaw Mang Kheon, dalam istilah Inggris diberi nama DRAGON FRUIT clan di Indonesia dikenal dengan nama BUAH NAGA Sebenarnya tanaman ini bukan tanaman asil daratan Asia, tetapi merupakan tanaman ask Meksiko clan Amerika Selatan bagian utara ( Colombia ).  Pada awalnya buah naga ini dibawa kekawasan Indocina ( Vietnam ) oleh seorang Perancis sekitar tahun 1870. dari Guyama Amerika Selatan sebagai hiasan sebab sosoknya yang unik dan bunganya yang cantik dan berwarna putih. Baru sekitar tahun 1980 setelah dibawa ke Okinawa Jepang tanaman ini mendunia karena sangat menguntungkan. Pada tahun 1977 buah ini dibawa ke Indonesia clan berhasil disemaikan kemudian dibudidayakan. Buah naga kaya akan vitamin dan mineral dengan kandungan serat cukup banyak sehingga cocok untuk diet.
    </string>
    <string name="sibunaga_serba">Serba-Serbi Buah Naga (Sibunaga)</string>
    <string name="tanamkuy_about">Gardroid</string>
    <string name="deskripsi_tentang">Gardroid adalah aplikasi yang dapat membantu untuk mengetahui informasi mengenai budidaya tanaman sayuran. Aplikasi ini dilengkapi dengan fitur tanya jawab petani dengan pakar tanaman sayuran, info cuaca, dan farming notes.</string>
    <string name="datadiri">(Ike Devanti - 09031281722039)</string>
    <string name="todo">TODO</string>
    <string name="subject">Subject</string>
    <string name="pesankritik">Masukan Pesan disini...</string>
    <string name="kirim">kirim</string>
    <string name="todo2">TODO</string>
    <string name="contact_us">Contact Us</string>
    <string name="versi_1_0">Versi 1.0</string>
    <string name="title_activity_buatcatatan">Form Catatan Baru</string>
    <string name="title_activity_lihatcatatan">Lihat Catatan</string>
    <string name="title_activity_updatecatatan">Update Catatan</string>
    <string name="title_activity_buah_naga">Budidaya</string>
    <string name="title_activity_cara_tanam">Tanya Pakar</string>
    <string name="title_activity_step">Info Budidaya</string>
    <string name="title_activity_info_cuaca">Info Cuaca</string>
    <string name="title_activity_tanya_pakar">Tanya Pakar</string>
    <string name="title_activity_scrolling">Bantuan</string>
    <string name="title_activity_tentang">Tentang</string>
    <string name="title_activity_step1">Cabe Merah</string>
    <string name="title_activity_step2">Tomat</string>
    <string name="title_activity_step3">Daun Bawang</string>
    <string name="title_activity_step4">Kubis</string>
    <string name="action_settings">Settings</string>
    <string name="bantuan_buah_naga">Pada menu "Serba-Serbi" Pengguna dapat mengetahui informasi
    asal-usul buah naga, jenis-jenis buah naga, dan manfaat buah naga.
    buah naga.\n</string>
    <string name="bantuan_cara_tanam">Pada menu ‘CARA TANAM’ Pengguna dapat mengetahui informasi
        cara menanam atau budidaya buah naga. </string>
    <string name="bantuan_text">
        "Pada menu ‘BANTUAN’ Pengguna dapat mengetahui cara Penggunaan dan juga fungsi "
        "dari masing-masing menu pada aplikasi Sibunaga.\n"
    </string>
    <string name="bantuan_tentang">Pada menu ‘TENTANG’ Pengguna dapat melihat identitas aplikasi
        BuNaga dan pengguna dapat langsung melakukan aksi untuk mengirim kritik dan saran melalui
        tombol yang tersedia, yaitu: email ke pengembang dan melalui media sosial pengembang.
    </string>
    <string name="text_infochat">Hi! Pak Tani siap menjawab.</string>
    <string name="namapengirim">masukan (Nama + Kota )</string>
    <string name="namakota">masukan Kota</string>
    <string name="namaprovinsi">masukan Provinsi</string>
    <string name="pesantanya">masukan Pesan</string>
    <string name="category_step1">1.	Menyiapkan Bibit Buah Naga</string>
    <string name="category_step2">2.	Persiapan Tanam Buah Naga</string>
    <string name="category_step3">3.	Cara Tanam Bibit Buah Naga</string>
    <string name="category_step4">4.	Pemeliharaan Buah Naga</string>
    <string name="category_step5">5.	Pemanenan Buah Naga</string>
    <string name="description_step1">
        Menggunakan benih atau bibit buah naga yang berkualitas merupakan salah satu kunci agar memperoleh hasil yang maksimal saat pemanenan buah naga.\n\n
Untuk menanam tanaman buah naga bisa dengan cara generatif dan vegetatif, secara generatif berarti menanam buah naga menggunakan biji atau benih buah naga dan secara vegetatif menggunakan bibit atau dari batang buah naga yang sudah pernah berbuah.\n\n
Sebenarnya menanam buah naga lebih mudah secara vegetatif, itu berarti menggunakan bibit buah naga.\n\n
Karena apabila menggunakan biji benih atau secara generatif  penanaman memerlukan tempat penangkaran khusus, selain itu penanaman menggunakan bibit hasil buahnya akan sama dengan indukan, maka pilihlah bibit yang unggul.\n\n
Jika menanam pertama kali lebih baik bibitnya anda beli saja.\n\n

Ciri – ciri bibit buah naga yang bagus : \n
•	Mempunyai tunal paling sedikit 4\n
•	Umur bibit sudah lebih dari 2 bulan\n
•	Tinggi bibit minimal 50cm merupakan tunas baru\n
•	Batang berwarna hijau dan sehat, tidak ada penyakit\n
•	Umur indukan sudah berbuah minimal 3 kali\n
•	Usahakan memastikan hasil dari indukan nya\n
Jika anda ingin membuat sendiri bibit buah naga maka anda bisa menyiapkan batang, media tanam dan peralatan nya.\n\n

Cara membuat bibit buah naga :\n
1.	Memilih Calon Bibit tanaman Buah Naga\n
Batang bibit di ambil dari indukan tanaman yang sudah pernah berbuah secara produktif, carilah batang yang diameter sekitar 8 cm dan tingginya 70 cm warnanya hijau kelabu serta tampak sehat dan keras dan tua. Usahakan tidak mengambil dari induk kan yang ada penyakitnya.\n\n
2.	Mengambil calon Bibit Dari Indukan\n
Memotong batang tanaman yang sudah dipilih dengan panjang 80 – 120 cm. Sisakan 20 cm dari batang indukan supaya tetap bertumbuh, yang 80 cm di jadikan calon bibit tanaman. Usahakan setiap batang memiliki minimal 4 tunas yang sudah tumbuh.\n\n
3.	Menyiapkan Batang Calon Bibit Tanaman\n
Memotong lagi batang – batang yang sudah di ambil dari indukan dengan panjang 20 – 30 cm, untuk potongan atas tampak rata dan potongan bawah meruncing atau lancip untuk di tanam di media tanam.
4.	Memberi Fungisida\n
Pemberian fungisida ini bertujuan agar tanaman terhindar dari penyakit, caranya celupkan bagian bawah batang tanaman.\n\n
5.	Memberi Perangsang Akar\n
Bagian pangkal bawah batang tanaman di olesi perangsang akar, lalu tanam di bedengan atau polybag yang sudah berisi media tanam dengan kedalaman sekitar 5 cm.
Media tanam terbuat dari campuran kompos, tanah, dan sekam padi dengan perbandingan 2: 1 : ½.\n\n
6.	Menaungi Bibit Tanaman\n
Setelah tertanam beri perlindungan steak tanaman berupa naungan dari sinar matahari langsung.\n\n
7.	Menyiram Steak Tanaman\n
Tanaman steak batang perlu di siram 2 kali sehari pada pagi dan sore hari secara rutin.\n\n
8.	Memberi Cahaya Matahari\n
Setelah batang steak di rawat selama 3 minggu, tunas pertama sudah tumbuh lalu buka penutup atau naungan tanaman agar tunas pertama terkena cahaya matahari sepenuhnya.\n\n
Itulah cara membuat bibit tanaman buah naga dari steak batang, cukup mudah kan. Selanjutnya ke tahap penanaman.\n\n

    </string>
</resources>